(library
  (name        fix_simulation)
  (public_name fix_simulation)
  (wrapped  false)
  (modules (:standard \ server client))
  (flags (:standard -open Imandra_prelude))
  (libraries 
      imandra-prelude
       lwt.unix
        venue
        fix_engine
        core_pp
        core_time_defaults
        protocol_pp
        conversions    
  )
)

(executable
  (name server)
  (modules server)
  (libraries 
      imandra-prelude
      lwt.unix
      venue
      fix_engine
      fix_simulation
      protocol_pp
      conversions
  )
)

(executable
  (name client)
  (modules client)
  (libraries 
      imandra-prelude
      yojson
      lwt.unix
      venue
      fix_engine
      fix_simulation
      conversions
      protocol_pp
      types_pp
      cmdliner
      ZMQ
      lwt-zmq
  )
)
