(library
  (name        test)
  (public_name test)
  (wrapped  false)
  (modules test_cache)
  (flags (:standard -open Imandra_prelude))
  (libraries imandra-prelude yojson protocol_pp core_printer)
)

(executable
  (name test_runner) 
  (libraries imandra-prelude threads cmdliner lwt.unix fix_simulation protocol_pp core_printer)
  (modules test_runner config_parser)
)
